; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/cocoa/extr_vidgcd.c_VIDGCDVdp1DrawStart.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/cocoa/extr_vidgcd.c_VIDGCDVdp1DrawStart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@Vdp1Regs = common dso_local global %struct.TYPE_2__* null, align 8
@vdp1width = common dso_local global i32 0, align 4
@vdp1height = common dso_local global i32 0, align 4
@vdp1pixelsize = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VIDGCDVdp1DrawStart() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i32, i32* %2, align 4
  %4 = and i32 %3, 1
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %15

6:                                                ; preds = %0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = and i32 %9, 2
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %6
  store i32 512, i32* @vdp1width, align 4
  store i32 512, i32* @vdp1height, align 4
  br label %14

13:                                               ; preds = %6
  store i32 1024, i32* @vdp1width, align 4
  store i32 256, i32* @vdp1width, align 4
  br label %14

14:                                               ; preds = %13, %12
  store i32 1, i32* @vdp1pixelsize, align 4
  br label %16

15:                                               ; preds = %0
  store i32 512, i32* @vdp1width, align 4
  store i32 256, i32* @vdp1height, align 4
  store i32 2, i32* @vdp1pixelsize, align 4
  br label %16

16:                                               ; preds = %15, %14
  %17 = call i32 (...) @VIDGCDVdp1EraseFrameBuffer()
  ret void
}

declare dso_local i32 @VIDGCDVdp1EraseFrameBuffer(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
